<resources>
    <string name="app_name">Games Break</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="inicie_sesi_n">Iniciar sesión</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="bienvenido_a">Games Break</string>
    <string name="imagen_usuario">Imagen usuario</string>
    <string name="olvid_su_contrase_a_ingrese_aqui">¿Olvidó su contraseña? Ingrese aqui.</string>
    <string name="foto_del_juego">foto del juego</string>
    <string name="mis_juegos">Mis juegos</string>
    <string name="compra">Tienda</string>
    <string name="mis_juegosGameOfUser">Mis juegos</string>
    <string name="no_tienes_juegos_comprados">¡No tienes juegos comprados!</string>
    <string name="ic_joystick_gamesofuser">ic_joystick gamesOfUser</string>
    <string name="epic_games">Epic Games</string>
    <string name="nakama">Nakama</string>
    <string name="seleccione_un_intermediario">Seleccione un intermediario</string>
    <string name="steam">Steam</string>
    <string name="image_of_game">Image of game</string>
    <string name="image_of_game_of_user">Image of game</string>
    <string name="greeting_home">¡Hola, %1$s!</string>
    <string name="price_game_of_user">Precio: $</string>
    <string name="name_of_game_of_user">Nombre del juego:</string>
    <string name="menssage_error_login">¡Usuario o clave incorrecta! Verifique los datos ingresados.</string>
    <string name="msg_release_in">"Año de lanzamiento:"</string>
    <string name="imagen_de_joystick">imagen de Joystick</string>
    <string name="imagen_de_carrito_de_compras">imagen de carrito de compras</string>
    <string name="imagen_de_candado">imagen de candado</string>
    <string name="price_of_game_purchase">"Precio de juego: $"</string>
    <string name="percentage_of_intermediary">"Recargo: "</string>
    <string name="price_total_purchase">"Precio total: $"</string>
    <string name="calcular_total">Calcular total</string>
    <string name="comprar">Comprar</string>
    <string name="detalle_compra">Detalle de compra</string>
    <string name="juegos_en_venta">Juegos en venta</string>
    <string name="successful_purchase">¡Compra realizada con éxito!</string>
    <string name="rejected_purchase">¡Compra rechazada por fondos insuficientes!</string>
    <string name="user_has_the_game">¡Ya tienes este juego!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_cashback_applies">¡No aplica cashback!</string>
    <string name="cashback">"Cashback otorgado: "</string>
    <string name="mis_compras">Mis compras</string>
    <string name="imagen_de_bolso_de_compras">Imagen de bolso de compras</string>
    <string name="mis_compras_realizadas">Mis compras</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>