<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".activities.HomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@id/cl_container"
        app:layout_constraintStart_toStartOf="@id/cl_container"
        app:layout_constraintTop_toTopOf="@id/cl_container"
        app:menu="@menu/toolbar_menu"
        app:title=" "
        app:titleTextColor="@color/white">

        <TextView
            android:id="@+id/tv_greeting_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="Hola, Franco!" />

    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_myGames"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="@id/cl_container"
        app:layout_constraintEnd_toStartOf="@id/cv_buyGames"
        app:layout_constraintStart_toStartOf="@id/cl_container"
        app:layout_constraintTop_toTopOf="@id/cl_container"
        app:layout_constraintVertical_bias="0.25">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/imagen_de_joystick"
            android:rotation="-25"
            android:src="@drawable/ic_joystick_new"
            app:tint="@color/black" />

        <TextView
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            android:text="@string/mis_juegos"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_buyGames"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="@id/cl_container"
        app:layout_constraintEnd_toEndOf="@id/cl_container"
        app:layout_constraintStart_toEndOf="@id/cv_myGames"
        app:layout_constraintTop_toTopOf="@id/cl_container"
        app:layout_constraintVertical_bias="0.25">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/imagen_de_carrito_de_compras"
            android:src="@drawable/ic_shop"
            app:tint="@color/black" />

        <TextView
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            android:text="@string/compra"
            android:paddingTop="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
