<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="12dp"
    tools:context=".activities.PurchaseOfGameActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_PurchaseGame"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_purchase"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_saleOfGame"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_of_game"
                android:src="@drawable/ic_joystick_new"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_purchase"
                app:layout_constraintStart_toStartOf="@id/cl_card_purchase"
                app:layout_constraintTop_toTopOf="@id/cl_card_purchase" />

            <TextView
                android:id="@+id/tv_tittleGame_CardPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/cl_card_purchase"
                app:layout_constraintStart_toEndOf="@id/iv_saleOfGame"
                app:layout_constraintTop_toTopOf="@id/cl_card_purchase"
                tools:text="Titulo" />

            <TextView
                android:id="@+id/tv_priceGame_CardPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="22sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_purchase"
                app:layout_constraintEnd_toEndOf="@id/cl_card_purchase"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toEndOf="@id/iv_saleOfGame"
                tools:text="Precio del juego" />

            <TextView
                android:id="@+id/tv_releaseDate_CardPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.5dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@id/cl_card_purchase"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@id/iv_saleOfGame"
                app:layout_constraintTop_toBottomOf="@id/tv_tittleGame_CardPurchase"
                tools:text="Publicado el..." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_options_intermediary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="15dp"
        android:text="@string/seleccione_un_intermediario"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/rg_intermediary_options"
        app:layout_constraintEnd_toEndOf="@id/cv_PurchaseGame"
        app:layout_constraintStart_toStartOf="@id/cv_PurchaseGame"
        app:layout_constraintTop_toBottomOf="@id/cv_PurchaseGame" />


    <RadioGroup
        android:id="@+id/rg_intermediary_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checkedButton="@id/rb_steam"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/tv_options_intermediary"
        app:layout_constraintStart_toStartOf="@id/cv_PurchaseGame"
        app:layout_constraintTop_toBottomOf="@id/tv_options_intermediary">

        <RadioButton
            android:id="@+id/rb_epicGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/epic_games"
            android:textSize="17sp"
            android:textStyle="bold"
            app:buttonTint="@color/black" />


        <RadioButton
            android:id="@+id/rb_nakama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/nakama"
            android:textSize="17sp"
            android:textStyle="bold"
            app:buttonTint="@color/black" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_steam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/steam"
            android:textSize="17sp"
            android:textStyle="bold"
            app:buttonTint="@color/black" />


    </RadioGroup>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/black"
        android:text="@string/calcular_total"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_intermediary_options" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_priceTotalPurchase"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:visibility="gone"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        app:layout_constraintVertical_bias="0.25">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/detalle_compra"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:paddingHorizontal="20dp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_priceOfGame"
                />


            <TextView
                android:id="@+id/tv_priceOfGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_purchase"
                tools:text="Precio base:" />

            <TextView
                android:id="@+id/tv_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"

                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_priceOfGame"
                tools:text="Porcentaje: " />

            <TextView
                android:id="@+id/tv_priceTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_percentage"
                tools:text="precio final: " />

            <Button
                android:id="@+id/btn_buyGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_percentage"
                android:layout_marginEnd="20dp"
                android:text="@string/comprar"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/black"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>